# maze-challenge

./: .gitignore  .prettierignore  Cargo.toml  README.md  TODO.txt  build.sh  package-lock.json  package.json  todo.txt  valid-inputs.txt  webpack.config-dev.js  webpack.config-prod.js
client/: bootstrap.js  draw-maze.js  index.html  index.js  package-lock.json  package.json  prism.css  prism.js  style.css  test-maze.js  transforms.js  webpack.config.base.js  webpack.config.js  webpack.config.prod.js
docs/: 1.bootstrap.js  132.js  875.js  bootstrap.js  bundle-7725c1ff96fc0af37cec.js  challenge.md  index.html  index.js
js/: index.js
solutions/: solve-maze.js  solve-maze.ts
src/: check_solution.rs  generate_maze.rs  lib.rs  util.rs
static/: index.html  index.js  instructions.html  solve-maze.ts  types.ts  util.ts  valid-inputs.txt
