[package]
name = "maze-challenge"
version = "0.1.0"
authors = ["Max <max.nachlinger-no-spam@gmail.com>"]
categories = ["wasm", "maze"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.47"
lazy_static = "1.4.0"
rand = {version = "0.7", features = ["wasm-bindgen"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0.63"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
