[package]
name = "maze-challenge"
version = "0.1.0"
authors = ["Max <max.nachlinger-no-spam@gmail.com>"]
categories = ["wasm", "maze"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.57"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.30"
